syntax = "proto3";
package protobuf;

import "enums/enums.proto";
import "messages/user.proto";

message PersonalStateMsgEvent {
    messages.User               user      = 1;
    enums.EMSG_PERSONAL_STATE   state     = 2;
    messages.Activity           activity  = 3;
}

message PersonalActivityMsgEvent {
    messages.User      user      = 1;
    messages.Activity  activity  = 2;
}